--- a/faq.html
+++ b/faq.html
@@ -1,33 +1,35 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Velocity Funds</title>
+  <title>FAQ - Velocity Funds</title>
   <meta name="description" content="Velocity Funds — futures prop firm evaluations with clear rules, tight risk, and fast payouts.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="/assets/images/velocity-funds-orbital-icon.svg" type="image/svg+xml">
+  <meta property="og:title" content="Velocity Funds">
+  <meta property="og:description" content="Futures prop firm evaluations with clear rules, tight risk, and fast payouts.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="/assets/images/velocity-funds-orbital-icon.svg">
   <link rel="stylesheet" href="/assets/css/styles.css">
   <script defer src="/assets/js/main.js"></script>
-
-<title>FAQ — Velocity Funds</title>
 </head>
 <body class="bg-black text-white">
 <header class="sticky top-0 z-50 bg-neutral-950/80 backdrop-blur border-b border-neutral-800">
   <div class="mx-auto max-w-7xl px-4 py-3 flex items-center justify-between">
     <a href="/index.html" class="flex items-center gap-2">
-      <img src="/assets/images/logo.svg" alt="Velocity Funds" class="h-8 w-8" />
+      <img src="./assets/images/velocity-funds-orbital-icon.svg" alt="Velocity Funds" class="h-8 w-8" />
       <span class="text-white font-semibold text-lg">Velocity Funds</span>
     </a>
     <nav class="hidden md:flex items-center gap-6 text-sm">
       <a class="nav-link" href="/index.html">Home</a>
-      <a class="nav-link" href="/challenges.html">Challenges</a>
       <a class="nav-link" href="/rules.html">Rules</a>
       <a class="nav-link" href="/faq.html">FAQ</a>
       <a class="nav-link" href="/leaderboard.html">Leaderboard</a>
-      <a class="btn btn-primary" href="/dashboard.html">Trader Dashboard</a>
+      <a class="btn btn-primary" href="#">Login</a>
     </nav>
     <button id="mobileMenuBtn" class="md:hidden inline-flex items-center justify-center rounded-lg border border-neutral-700 px-3 py-2 text-white">
       <span class="sr-only">Toggle menu</span>
@@ -43,7 +45,7 @@
       <a class="mobile-link" href="/rules.html">Rules</a>
       <a class="mobile-link" href="/faq.html">FAQ</a>
       <a class="mobile-link" href="/leaderboard.html">Leaderboard</a>
-      <a class="btn btn-primary w-full text-center" href="/dashboard.html">Trader Dashboard</a>
+      <a class="btn btn-primary w-full text-center" href="#">Login</a>
     </div>
   </div>
 </header>
@@ -51,37 +53,30 @@
 <section class="mx-auto max-w-4xl px-4 py-16">
   <h1 class="section-title">Frequently Asked Questions</h1>
   <div class="divide-y divide-neutral-800">
-    <details class="faq">
-      <summary>How fast are payouts?</summary>
-      <p>First payout is typically within 7–14 days after going live, then biweekly. Edit text in <code>/faq.html</code>.</p>
-    </details>
-    <details class="faq">
-      <summary>What platforms are supported?</summary>
-      <p>NinjaTrader, Tradovate, R|Trader Pro, and more—configure your integrations on the dashboard page.</p>
-    </details>
-    <details class="faq">
-      <summary>Are EAs/algos allowed?</summary>
-      <p>Discretionary and algo strategies are allowed if they follow risk rules; HFT/latency abuse is prohibited.</p>
-    </details>
-    <details class="faq">
-      <summary>Do you allow copy trading?</summary>
-      <p>Mirroring between multiple evaluation accounts to circumvent risk rules is prohibited.</p>
-    </details>
+    <details class="faq"><summary>What platform can I trade on?</summary><p>Rithmic.</p></details>
+    <details class="faq"><summary>How do I get funded?</summary><p>Complete the Velocity Starter evaluation or join Velocity Funded directly.</p></details>
+    <details class="faq"><summary>Can I hold trades overnight?</summary><p>Same as FundingTicksï¿½ overnight policy.</p></details>
+    <details class="faq"><summary>How are payouts handled?</summary><p>Every 5 trading days at a 90% split.</p></details>
+    <details class="faq"><summary>What happens if I hit my drawdown?</summary><p>The account terminates automatically and can be reset.</p></details>
+    <details class="faq"><summary>Is there an activation fee?</summary><p>No activation fees.</p></details>
+    <details class="faq"><summary>How does the 35% consistency rule work?</summary><p>Use FundingTicksï¿½ explanation adapted to Velocity Funds; the required percentage is 35%.</p></details>
+    <details class="faq"><summary>Can I scale up my funded account?</summary><p>Yes, per the Scaling Plan.</p></details>
+    <details class="faq"><summary>Whatï¿½s the difference between Starter and Funded?</summary><p>Starter = 1-step evaluation; Funded = direct funding.</p></details>
   </div>
 </section>
+
 <footer class="border-t border-neutral-800 mt-24">
   <div class="mx-auto max-w-7xl px-4 py-12 grid md:grid-cols-4 gap-8">
     <div>
       <div class="flex items-center gap-2 mb-3">
-        <img src="/assets/images/logo.svg" class="h-8 w-8" alt="Velocity Funds">
+        <img src="./assets/images/velocity-funds-orbital-icon.svg" class="h-8 w-8" alt="Velocity Funds">
         <span class="text-white font-semibold">Velocity Funds</span>
       </div>
       <p class="text-neutral-400 text-sm leading-6">Accelerating traders with transparent rules, disciplined risk, and fast, reliable payouts.</p>
     </div>
-    <div>
-      <h4 class="footer-heading">Product</h4>
+ <div>
+      <h4 class="footer-heading">Funding</h4>
       <ul class="footer-links">
-        <li><a href="/challenges.html">Challenges</a></li>
         <li><a href="/rules.html">Rules</a></li>
         <li><a href="/faq.html">FAQ</a></li>
         <li><a href="/leaderboard.html">Leaderboard</a></li>
@@ -114,3 +109,9 @@
 
 </body>
 </html>
+
+
+
+
+
+
