--- a/rules.html
+++ b/rules.html
@@ -1,33 +1,35 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Velocity Funds</title>
+  <title>Rules â€” Velocity Funds</title>
   <meta name="description" content="Velocity Funds — futures prop firm evaluations with clear rules, tight risk, and fast payouts.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="/assets/images/velocity-funds-orbital-icon.svg" type="image/svg+xml">
+  <meta property="og:title" content="Velocity Funds">
+  <meta property="og:description" content="Futures prop firm evaluations with clear rules, tight risk, and fast payouts.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="/assets/images/velocity-funds-orbital-icon.svg">
   <link rel="stylesheet" href="/assets/css/styles.css">
   <script defer src="/assets/js/main.js"></script>
-
-<title>Rules — Velocity Funds</title>
 </head>
 <body class="bg-black text-white">
 <header class="sticky top-0 z-50 bg-neutral-950/80 backdrop-blur border-b border-neutral-800">
   <div class="mx-auto max-w-7xl px-4 py-3 flex items-center justify-between">
     <a href="/index.html" class="flex items-center gap-2">
-      <img src="/assets/images/logo.svg" alt="Velocity Funds" class="h-8 w-8" />
+      <img src="./assets/images/velocity-funds-orbital-icon.svg" alt="Velocity Funds" class="h-8 w-8" />
       <span class="text-white font-semibold text-lg">Velocity Funds</span>
     </a>
     <nav class="hidden md:flex items-center gap-6 text-sm">
       <a class="nav-link" href="/index.html">Home</a>
-      <a class="nav-link" href="/challenges.html">Challenges</a>
       <a class="nav-link" href="/rules.html">Rules</a>
       <a class="nav-link" href="/faq.html">FAQ</a>
       <a class="nav-link" href="/leaderboard.html">Leaderboard</a>
-      <a class="btn btn-primary" href="/dashboard.html">Trader Dashboard</a>
+      <a class="btn btn-primary" href="#">Login</a>
     </nav>
     <button id="mobileMenuBtn" class="md:hidden inline-flex items-center justify-center rounded-lg border border-neutral-700 px-3 py-2 text-white">
       <span class="sr-only">Toggle menu</span>
@@ -43,7 +45,7 @@
       <a class="mobile-link" href="/rules.html">Rules</a>
       <a class="mobile-link" href="/faq.html">FAQ</a>
       <a class="mobile-link" href="/leaderboard.html">Leaderboard</a>
-      <a class="btn btn-primary w-full text-center" href="/dashboard.html">Trader Dashboard</a>
+      <a class="btn btn-primary w-full text-center" href="#">Login</a>
     </div>
   </div>
 </header>
@@ -53,37 +55,38 @@
   <div class="prose prose-invert max-w-none">
     <ul class="rules-list">
       <li><strong>Daily Loss Limit:</strong> Exceeding the daily loss ends the evaluation.</li>
-      <li><strong>Trailing Drawdown:</strong> Trailing behind closed P&amp;L until target is met; then static.</li>
-      <li><strong>Consistency:</strong> No single-day > 40% of total target during evaluation.</li>
-      <li><strong>News:</strong> Trading through major red-folder news allowed but use caution (configurable).</li>
+      <li><strong>Trailing Drawdown:</strong> Trails behind closed P&amp;L until target is met; then becomes static.</li>
+      <li><strong>Consistency:</strong> No single day should exceed 40% of the total target during evaluation.</li>
+      <li><strong>News:</strong> Trading through major red-folder news is allowed, but use caution (configurable).</li>
       <li><strong>Holding:</strong> No overnight holds in evaluation; live account per product rules.</li>
-      <li><strong>Products:</strong> CME equity index futures &amp; micros; add more in <code>/rules.html</code>.</li>
+      <li><strong>Products:</strong> CME equity index futures &amp; micros; expand in <code>/rules.html</code> as needed.</li>
       <li><strong>Scaling:</strong> See Scaling Plan below for contract limits after funding.</li>
     </ul>
     <h2>Scaling Plan</h2>
     <table class="table">
       <thead><tr><th>Balance</th><th>Max Contracts</th></tr></thead>
       <tbody>
-        <tr><td>$0–$2,500</td><td>2 micros</td></tr>
-        <tr><td>$2,500–$5,000</td><td>4 micros</td></tr>
+        <tr><td>$0â€“$2,500</td><td>2 micros</td></tr>
+        <tr><td>$2,500â€“$5,000</td><td>4 micros</td></tr>
         <tr><td>$5,000+</td><td>6+ micros (manager approval)</td></tr>
       </tbody>
     </table>
   </div>
+  <p class="mt-3 text-neutral-500 text-xs">Adjust these in <code>/rules.html</code> or share your final policy and Iâ€™ll update.</p>
 </section>
+
 <footer class="border-t border-neutral-800 mt-24">
   <div class="mx-auto max-w-7xl px-4 py-12 grid md:grid-cols-4 gap-8">
     <div>
       <div class="flex items-center gap-2 mb-3">
-        <img src="/assets/images/logo.svg" class="h-8 w-8" alt="Velocity Funds">
+        <img src="./assets/images/velocity-funds-orbital-icon.svg" class="h-8 w-8" alt="Velocity Funds">
         <span class="text-white font-semibold">Velocity Funds</span>
       </div>
       <p class="text-neutral-400 text-sm leading-6">Accelerating traders with transparent rules, disciplined risk, and fast, reliable payouts.</p>
     </div>
     <div>
-      <h4 class="footer-heading">Product</h4>
+      <h4 class="footer-heading">Funding</h4>
       <ul class="footer-links">
-        <li><a href="/challenges.html">Challenges</a></li>
         <li><a href="/rules.html">Rules</a></li>
         <li><a href="/faq.html">FAQ</a></li>
         <li><a href="/leaderboard.html">Leaderboard</a></li>
@@ -116,3 +119,8 @@
 
 </body>
 </html>
+
+
+
+
+
